# race-time-tracker

./: .gitignore  App.py  Config.ini  Main.py  README.md  app.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: pylint.yml  python-app.yaml  python-app.yml
dto/: constants.py
logic/: DBAccessWorker.py  DBSetupWorker.py  Race.py  Settings.py  race.py  race_timer.py  stopwatch.py
logic/dataaccess/: DBAccessWorker.py  DBSetupWorker.py
nameundifined/: undifined.py
view/: MainwindowView.py  RaceView.py  RaceView.ui  SettingsView.py  mainwindow.ui  settings.ui  test.ui  ui_mainwindow.py  ui_settings.py  ui_test.py
