[project]
name = "RaceTimeTracker"
dynamic = ["version"]
dependencies = [
    "PySide6",
    "gpiozero"
]
requires-python = ">= 3.11"
authors = [
    { name = "LiTe", email = "test@example.com" }
]
description = "Timer tracker for racing"
readme = "README.md"

[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "_version.py"

[tool.setuptools]
 py-modules = ["view", "logic"]

[tool.pylint.MASTER]
ignore = ["RaceView.py"]
max-line-length=250
max-attributes=10

[tool.pylint."MESSAGES CONTROL"]
disable=[
  'no-name-in-module'
]
